--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,7 @@ dependencies {
     implementation "androidx.work:work-multiprocess:$work_version"
 
     implementation 'com.google.code.gson:gson:2.9.0'
+
+    implementation 'org.osmdroid:osmdroid-android:6.1.13'
+
 }
